# eredis

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibev.cmake  FindRedis.cmake
doc/: CMakeLists.txt  doxyfile.in
include/: CMakeLists.txt  eredis.h
src/: CMakeLists.txt  eredis-drop-noexpire.c  eredis.c  queue.c  reader.c  rw.c  test-async-thr.c  test-async.c  test-hosts.conf  test-sync.c
test/: CMakeLists.txt  eredis-drop-noexpire.c  test-async-thr.c  test-async.c  test-eredis.sh  test-sync-thr.c  test-sync.c
