
IF(NOT SKIP_DOCUMENTATION)
  FIND_PACKAGE(Doxygen)
  IF(DOXYGEN_FOUND)
    CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/doxyfile.in
      ${CMAKE_CURRENT_BINARY_DIR}/doxyfile @ONLY )

    ADD_CUSTOM_TARGET( doc
      ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/doxyfile
      WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
      COMMENT "Generating API documentation with Doxygen" VERBATIM
      )

    IF(FORCE_INSTALL_DOCUMENTATION)
      INSTALL( DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
        DESTINATION share/eredis/doc
        USE_SOURCE_PERMISSIONS
        COMPONENT doc
        )
    ELSEIF(CMAKE_VERSION VERSION_GREATER 2.8)
      INSTALL( DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
        DESTINATION share/eredis/doc
        USE_SOURCE_PERMISSIONS
        COMPONENT doc
        OPTIONAL
        )
    ENDIF()
  ENDIF(DOXYGEN_FOUND)
ENDIF(NOT SKIP_DOCUMENTATION)
